# dbsof-ui

./: README.md  openapi.yaml
.github/workflows/: ui_tests.yml
.yarn/releases/: yarn-3.2.0.cjs
server/: pyproject.toml
server/src/dbsof_server/: __init__.py  app.py  core.py
server/src/dbsof_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/src/dbsof_server/blueprints/: ai.py  imports.py  instances.py  schema.py  sql.py  users.py
server/src/dbsof_server/data/: fourth_branch.db  inherit_main.db  main.db  should_empty.db
shared/auth/: README.md  auth.ts  index.ts  package.json
shared/codeEditor/: codeEditor.module.scss  completions.ts  index.tsx  package.json
shared/common/: logo.tsx  package.json  styles.scss
shared/common/branchGraph/: branchGraph.module.scss  index.tsx  layout.ts
shared/common/decodeRawBuffer/: index.ts
shared/inspector/: buildItem.tsx  buildScalar.tsx  index.tsx  inspector.module.scss  package.json  state.ts
shared/lang-edgeql/: package.json
shared/lang-query/: genMeta.js  meta.js  package.json  query.ts
shared/nodeGraph/: index.ts  package.json
shared/platform/: client.ts  gel.ts  index.ts  package.json  userSettings.ts
shared/studio/: package.json
web/: README.md  index.html  package.json  vite.config.ts
web/playwright/: _globalSetup.ts  _globalTeardown.ts  auth.json  fixtures.ts
web/public/: app.webmanifest  latestInfo.json
web/src/: app.module.scss  app.tsx
web/tests/: dataViewer.spec.ts  flaskBackend.spec.ts  queryEditor.spec.ts  repl.spec.ts  simple.spec.ts
(+217 files in other folders)
