[project]
name = "dbsof-server"
version = "0.1.0"
description = "Lightweight Flask backend for the dbsof UI template"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
]

[project.scripts]
dbsof-server = "dbsof_server.app:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
